`feat: add user activation`
